syntax = "proto3";

package api.v1;

option go_package = "api/v1/mlService";

enum Role {
  OWNER = 0;
  BOOKER = 1;
}

service MlService {
  rpc Digest(DigestRequest) returns (DigestResponse){}
  rpc Trend(TrendRequest) returns (TrendResponse){}
}

message DigestRequest {
  Role role = 1;
  string path = 2;
}

message DigestResponse {
  repeated string news = 1;
}

message TrendRequest {
  Role role = 1;
  string path = 2;
}

message TrendResponse {
  repeated string incites = 1;
}